--- a/analysis/main_analysis.Rmd
+++ b/analysis/main_analysis.Rmd
@@ -105,10 +105,10 @@ custom_colors <- list(
   receiver_tom = brewer.pal(5, "Blues")[c(3,5)]
 )
 senders_colours <- c("#F191BC", "#E6007E", "#9363A6")
-receivers_colours <- c("#ee531f", "#f59879")
 senders_types <- c(expression(paste(eta,"=0.1")),
                   expression(paste(eta,"=0.5")),
                   "Random")
+receivers_colours <- c("#ee531f", "#f59879")
 receivers_types <- c(expression(paste(eta,"=0.0")),
                       expression(paste(eta,"=0.35")))
 ```
@@ -192,12 +192,12 @@ typical_offer_sequence %>%
   ggplot(aes(x= trial_number, y = average_offer, color = sender_threshold, fill=sender_threshold)) + 
   geom_line(size = 2.5) + 
   geom_ribbon(aes(ymin=average_offer-sd_offer, ymax=average_offer+sd_offer), linetype=2, alpha=0.1) + 
-  scale_color_manual(values = senders_colours[2:3], 
+  scale_color_manual(values = senders_colours[1:2], 
                      name = (expression(paste("Sender's ",theta))),
-                    labels = senders_types[2:3]) + 
-  scale_fill_manual(values = senders_colours[2:3], 
+                    labels = senders_types[1:2]) + 
+  scale_fill_manual(values = senders_colours[1:2], 
                      name = (expression(paste("Sender's ",theta))),
-                    labels = senders_types[2:3]) + 
+                    labels = senders_types[1:2]) + 
   scale_x_continuous(
       expand = c(0,0),
       name = "Trial number",
@@ -221,12 +221,12 @@ typical_offer_sequence %>%
   ggplot(aes(x= trial_number, y = average_offer, color = sender_threshold, fill=sender_threshold)) + 
   geom_line(size = 2.5) + 
   geom_ribbon(aes(ymin=average_offer-sd_offer, ymax=average_offer+sd_offer), linetype=2, alpha=0.1) + 
-  scale_color_manual(values = senders_colours[2:3], 
+  scale_color_manual(values = senders_colours[1:2], 
                      name = (expression(paste("Sender's ",theta))),
-                    labels = senders_types[2:3]) + 
-  scale_fill_manual(values = senders_colours[2:3], 
+                    labels = senders_types[1:2]) + 
+  scale_fill_manual(values = senders_colours[1:2], 
                      name = (expression(paste("Sender's ",theta))),
-                    labels = senders_types[2:3]) + 
+                    labels = senders_types[1:2]) + 
   xlab("Trial number") + 
   scale_y_continuous(
       expand = c(0,0),
@@ -362,6 +362,7 @@ agregated_beliefs <-
   inner_join(min_beliefs) %>% 
   inner_join(max_beliefs)
 ```
+# DoM(0) beliefs
 
 ```{r}
 corretct_beliefs <- 
@@ -371,12 +372,12 @@ corretct_beliefs <-
   ggplot(aes(x= trial_number, y = Average, color = Type, fill=Type)) + 
   geom_line(size = 2.5) + 
   geom_ribbon(aes(ymin=Min, ymax=Max), linetype=2, alpha=0.1) + 
-  scale_color_manual(values = senders_colours, 
+  scale_color_manual(values = senders_colours[c(3,1,2)], 
                      name = (expression(paste("Sender's ",theta))),
-                    labels = senders_types) + 
-  scale_fill_manual(values = senders_colours, 
+                    labels = senders_types[c(3,2,2)]) + 
+  scale_fill_manual(values = senders_colours[c(3,1,2)], 
                      name = (expression(paste("Sender's ",theta))),
-                    labels = senders_types) + 
+                    labels = senders_types[c(3,1,2)]) + 
   facet_grid(vars(sender_threshold), vars(receiver_threshold))
 
 corretct_beliefs
@@ -388,16 +389,19 @@ miscallibrated_beliefs <-
   ggplot(aes(x= trial_number, y = Average, color = Type, fill=Type)) + 
   geom_line(size = 2.5) + 
   geom_ribbon(aes(ymin=Min, ymax=Max), linetype=2, alpha=0.1) + 
-  scale_color_manual(values = senders_colours, 
+  scale_color_manual(values = senders_colours[c(3,2,1)], 
                      name = (expression(paste("Sender's ",theta))),
-                    labels = senders_types) + 
-  scale_fill_manual(values = senders_colours, 
+                    labels = senders_types[c(3,2,1)]) + 
+  scale_fill_manual(values = senders_colours[c(3,2,1)], 
                      name = (expression(paste("Sender's ",theta))),
-                    labels = senders_types) + 
+                    labels = senders_types[c(3,2,1)]) + 
   facet_grid(vars(sender_threshold), vars(receiver_threshold))
 
 miscallibrated_beliefs
 ```
+# DoM(1) beliefs
+
+## Zero order beliefs
 
 ```{r}
 average_beliefs <- 
@@ -474,7 +478,7 @@ corretct_beliefs <-
   scale_fill_manual(values = receivers_colours, 
                      name = (expression(paste("Receiver's ",theta))),
                     labels = receivers_types) + 
-  facet_grid(vars(sender_threshold), vars(receiver_threshold))
+  facet_grid(vars(receiver_threshold), vars(sender_threshold))
 
 corretct_beliefs
 
@@ -492,10 +496,75 @@ misplaced_beliefs <-
   scale_fill_manual(values = receivers_colours, 
                      name = (expression(paste("Receiver's ",theta))),
                     labels = receivers_types) + 
-  facet_grid(vars(sender_threshold), vars(receiver_threshold))
+  facet_grid(vars(receiver_threshold), vars(sender_threshold))
 
 misplaced_beliefs
 ```
+
+## First order beliefs
+
+```{r}
+average_beliefs <- 
+  first_task_data$sender_beliefs %>% 
+  mutate(sender_threshold = ifelse(sender_threshold > 0, sender_threshold, "Random")) %>% 
+  mutate(sender_dom_level = factor(sender_dom_level),
+         sender_threshold = factor(sender_threshold),
+         receiver_dom_level = factor(receiver_dom_level),
+         receiver_threshold = factor(receiver_threshold)) %>% 
+  group_by(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, trial_number) %>% 
+  summarise(p_random = mean(q_1_1_0),
+            p_low = mean(q_1_1_1),
+            p_high = mean(q_1_1_2)) %>% 
+  pivot_longer(col=!c(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, trial_number),
+               names_to="Type", values_to = "Average")
+
+sd_beliefs <- 
+  first_task_data$sender_beliefs %>% 
+  mutate(sender_threshold = ifelse(sender_threshold > 0, sender_threshold, "Random")) %>% 
+  mutate(sender_dom_level = factor(sender_dom_level),
+         sender_threshold = factor(sender_threshold),
+         receiver_dom_level = factor(receiver_dom_level),
+         receiver_threshold = factor(receiver_threshold)) %>% 
+  group_by(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, trial_number) %>% 
+  summarise(p_low = sd(p_1_1_0),
+            p_high = sd(p_1_1_1)) %>%  
+  pivot_longer(col=!c(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, trial_number),
+               names_to="Type", values_to = "SD")
+
+min_beliefs <- 
+  first_task_data$sender_beliefs %>% 
+  mutate(sender_threshold = ifelse(sender_threshold > 0, sender_threshold, "Random")) %>% 
+  mutate(sender_dom_level = factor(sender_dom_level),
+         sender_threshold = factor(sender_threshold),
+         receiver_dom_level = factor(receiver_dom_level),
+         receiver_threshold = factor(receiver_threshold)) %>% 
+  group_by(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, trial_number) %>% 
+  summarise(p_low = min(p_1_1_0),
+            p_high = min(p_1_1_1)) %>%  
+  pivot_longer(col=!c(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, trial_number),
+               names_to="Type", values_to = "Min")
+
+max_beliefs <- 
+  first_task_data$sender_beliefs %>% 
+  mutate(sender_threshold = ifelse(sender_threshold > 0, sender_threshold, "Random")) %>% 
+  mutate(sender_dom_level = factor(sender_dom_level),
+         sender_threshold = factor(sender_threshold),
+         receiver_dom_level = factor(receiver_dom_level),
+         receiver_threshold = factor(receiver_threshold)) %>% 
+  group_by(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, trial_number) %>% 
+  summarise(p_low = max(p_1_1_0),
+            p_high = max(p_1_1_1)) %>%  
+  pivot_longer(col=!c(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, trial_number),
+               names_to="Type", values_to = "Max")
+
+agregated_beliefs <- 
+  average_beliefs %>% 
+  inner_join(sd_beliefs) %>% 
+  inner_join(min_beliefs) %>% 
+  inner_join(max_beliefs)
+```
+
+
 
 # OLD ANALYSIS - we can remove it
 
