--- a/analysis/paper_figures.Rmd
+++ b/analysis/paper_figures.Rmd
@@ -89,6 +89,7 @@ custom_colors <- list(
 )
 
 senders_colours <- c("#9363A6", "#E6007E","#F191BC")
+senders_colours_dom_2 <- c("#9363A6","#F191BC", "#E6007E")
 senders_types <- c(expression(paste(eta,"=0.1")),
                   expression(paste(eta,"=0.5")),
                   "Random")
@@ -163,9 +164,10 @@ pl_domminus1_offers <-
     theme(aspect.ratio = 0.9) +
     facet_grid(.~factor(receiver_threshold)) + 
     theme(text=element_text(size=20)) + 
-    ggtitle('DoM(-1) Sender vs. DoM(0) game dynamics') +
+    ggtitle('DoM(-1) Sender vs. DoM(0)\ngame dynamics') +
     guides(color = "none", fill = "none", linetype="none")
 pl_domminus1_offers
+ggsave("../figures/main_paper/figure_2_a.png", width = 50, height = 30, units = "cm")
 ```
 
 ```{r dom zero beliefs vs m1, fig.width=15, fig.height=5}
@@ -194,21 +196,21 @@ first_task_data$dom_0_receiver_beliefs %>%
       labels = c("random" ,"\u03B7 = 0.1", "\u03B7 = 0.5")) +
     facet_grid(.~sender_threshold) + 
     scale_x_continuous(name="Trial", breaks=seq(0, 12, 4)) +
-    scale_y_continuous(name = "Posterior P.", breaks = c(0,1)) +
-    ggtitle('DoM(0) Receiver beliefs vs. DoM(-1)') +
+    scale_y_continuous(name = "Posterior P.", breaks = c(0.0,0.5,1.0)) +
+    ggtitle('DoM(0) Receiver beliefs\nvs. DoM(-1)') +
     theme(aspect.ratio = dynamics_plot_aspect_ratio) +
     theme(text=element_text(size=20)) + 
   facet_grid(vars(receiver_threshold), vars(sender_threshold))
 dom_zero_beliefs_vs_dom_m1
+ggsave("../figures/main_paper/figure_2_b.png", width = 50, height = 30, units = "cm")
 ```
 
-```{r dom minus one vs dom zero game results, fig.width=30, fig.height=15}
+```{r dom minus one vs dom zero game results, fig.width=15, fig.height=10}
 w_h <- 1.67
 pl_domminus1_offers + dom_zero_beliefs_vs_dom_m1 + 
   plot_layout(widths=c(2,w_h), heights=c(2,w_h), guides = "collect") + 
-  plot_annotation(tag_levels = 'A') & theme(plot.tag = element_text(face = 'bold'),
-                                            plot.margin =)
-ggsave("../figures/main_paper/figure_2.png", width = 40, height = 20, units = "cm")
+  plot_annotation(tag_levels = 'A') & theme(plot.tag = element_text(face = 'bold'))
+ggsave("../figures/main_paper/figure_2.png", width = 50, height = 30, units = "cm")
 ```
 ### DoM(1) vs DoM(0)
 
@@ -236,8 +238,10 @@ first_task_data$game_results %>%
                      limits = c(0,1),
                      breaks = seq(0,1,0.2)) +
   ggtitle('Sender first offer by\nDoM level') +
-  theme(text=element_text(size=25)) 
+  theme(text=element_text(size=20), 
+        aspect.ratio = 1.3) 
 first_action_by_sender_dom_level
+ggsave("../figures/main_paper/figure_3_c.png", width = 50, height = 30, units = "cm")
 ```
 
 ```{r dom one vs dom zero, fig.width=10, fig.height=5}
@@ -282,8 +286,8 @@ pl_dom1_offers <-
     theme(text=element_text(size=20)) + 
     ggtitle('DoM(1) Sender vs. DoM(0)\ngame dynamics') +
     guides(color = "none", fill = "none", linetype="none", alpha="none")
-
 pl_dom1_offers
+ggsave("../figures/main_paper/figure_3_a.png", width = 50, height = 30, units = "cm")
 ```
 
 ```{r dom zero beliefs vs 1, fig.width=10, fig.height=5}
@@ -312,12 +316,13 @@ first_task_data$dom_0_receiver_beliefs %>%
       labels = c("random", "\u03B7 = 0.1", "\u03B7 = 0.5")) +
     facet_grid(.~sender_threshold) + 
     scale_x_continuous(name="Trial", breaks=seq(0, 12, 4)) +
-    scale_y_continuous(name = "Posterior P.", breaks = c(0,1)) +
+    scale_y_continuous(name = "Posterior P.", breaks = c(0.0,0.5,1.0)) +
     ggtitle('DoM(0) Receiver beliefs\nvs. DoM(1)') +
     theme(aspect.ratio = 1) +
   theme(text=element_text(size=20)) + 
   facet_grid(vars(receiver_threshold), vars(sender_threshold))
 dom_zero_beliefs_vs_dom_one
+ggsave("../figures/main_paper/figure_3_b.png", width = 50, height = 30, units = "cm")
 ```
 
 
@@ -344,21 +349,29 @@ first_task_data$sender_beliefs %>%
       name = expression(paste('Receiver threshold')),
       labels = c("\u03B7 = 0.0" ,"\u03B7 = 0.35")) +
     scale_x_continuous(name="Trial", breaks=c(0,4,8,11)) +
-    scale_y_continuous(name = "Posterior P.", breaks = c(0,1)) +
+    scale_y_continuous(name = "Posterior P.", breaks = c(0.0,0.5,1.0)) +
     ggtitle('DoM(1) Sender beliefs\nvs. DoM(0)') +
     theme(aspect.ratio = 1) +
   theme(text=element_text(size=20)) + 
   facet_grid(vars(receiver_threshold), vars(sender_threshold))
 dom_one_beliefs_vs_dom_zero
+ggsave("../figures/main_paper/figure_3_d.png", width = 50, height = 30, units = "cm")
 ```
 
 
 ```{r dom one vs dom zero game results, fig.width=15, fig.height=10}
-(pl_dom1_offers | dom_zero_beliefs_vs_dom_one) /
-  (first_action_by_sender_dom_level | dom_one_beliefs_vs_dom_zero) + 
-  plot_layout(widths=c(2,w_h), heights=c(2,w_h), guides = "collect") + 
+w_w <- 1.2
+top_row <- pl_dom1_offers + dom_zero_beliefs_vs_dom_one +
+  plot_layout(widths=c(2,w_w), heights=c(2,w_w), guides = "collect") + 
   plot_annotation(tag_levels = 'A') & theme(plot.tag = element_text(face = 'bold'))
-ggsave("../figures/main_paper/figure_3.png", width = 50, height = 30, units = "cm")
+top_row
+ggsave("../figures/main_paper/figure_3_top_row.png", width = 50, height = 30, units = "cm")
+w_h <- 1.6
+low_row <- first_action_by_sender_dom_level + dom_one_beliefs_vs_dom_zero + 
+  plot_layout(widths=c(2,w_h), heights=c(2,w_h), guides = "collect")
+low_row
+ggsave("../figures/main_paper/figure_3_low_row.png", width = 50, height = 30, units = "cm")
+# ggsave("../figures/main_paper/figure_3.png", width = 50, height = 30, units = "cm")
 ```
 
 
@@ -408,6 +421,7 @@ pl_dom1_dom2_offers <-
     ggtitle('DoM(1) Sender vs. DoM(2)\ngame dynamics') +
   guides(color = "none", shape = "none", fill = "none", linetype="none", alpha = "none")
 pl_dom1_dom2_offers
+ggsave("../figures/main_paper/figure_4_a.png", width = 50, height = 30, units = "cm")
 ```
 
 ```{r dom two beliefs vs 1, fig.width=10, fig.height=5}
@@ -433,16 +447,16 @@ first_task_data$dom_2_receiver_beliefs %>%
     scale_color_manual(
       values = senders_colours,
       name = expression(paste('Sender threshold')),
-      labels = c("random", "\u03B7 = 0.5" ,"\u03B7 = 0.1")) +
+      labels = c("random","\u03B7 = 0.1", "\u03B7 = 0.5")) +
     facet_grid(.~sender_threshold) + 
     scale_x_continuous(name="Trial", breaks=c(0,4,8,11)) +
-    scale_y_continuous(name = "Posterior P.", breaks = c(0,1)) +
+    scale_y_continuous(name = "Posterior P.", breaks = c(0.0,0.5,1.0)) +
     ggtitle('Receiver beliefs:\nDoM(2) vs. DoM(1)') +
     theme(aspect.ratio = 1) +
-    guides(color = "none") + 
   theme(text=element_text(size=20)) + 
   facet_grid(vars(receiver_threshold), vars(sender_threshold))
 dom_two_beliefs_vs_dom_one
+ggsave("../figures/main_paper/figure_4_b.png", width = 50, height = 30, units = "cm")
 ```
 
 ```{r dom one beliefs vs two, fig.width=10, fig.height=5}
@@ -468,12 +482,13 @@ first_task_data$sender_beliefs %>%
       name = expression(paste('Receiver threshold')),
       labels = c("\u03B7 = 0.0" ,"\u03B7 = 0.35")) +
     scale_x_continuous(name="Trial", breaks=c(0,4,8,11)) +
-    scale_y_continuous(name = "Posterior P.", breaks = c(0,1)) +
+    scale_y_continuous(name = "Posterior P.", breaks = c(0.0,0.5,1.0)) +
     ggtitle('DoM(1) Sender beliefs\nvs. DoM(2)') +
     theme(aspect.ratio = 1) +
   theme(text=element_text(size=20)) + 
   facet_grid(vars(receiver_threshold), vars(sender_threshold))
 dom_one_beliefs_vs_dom_two
+ggsave("../figures/main_paper/figure_4_d.png", width = 50, height = 30, units = "cm")
 ```
 
 ```{r relative reward distribution}
@@ -501,15 +516,28 @@ first_task_data$game_results %>%
   theme(text=element_text(size=20)) + 
   ggtitle('Total reward ratio') +
   xlab("Receiver DoM level")+
-  scale_y_continuous(name="Payout Ratio: R/S", 
+  scale_y_continuous(name="Payout Ratio: S/R", 
                      expand = c(0,0),
                      limits = c(-0.4,0.8),
                      breaks = seq(-0.4,0.8,0.2),
                      labels = seq(0.6,1.8,0.2))
 relative_reward_by_dom_levels
+ggsave("../figures/main_paper/figure_4_c.png", width = 50, height = 30, units = "cm")
 ```
 
 ```{r dom one vs dom two game results, fig.width=15, fig.height=10}
+w_w <- 1.6
+top_row <- pl_dom1_dom2_offers + dom_two_beliefs_vs_dom_one +
+  plot_layout(widths=c(w_w, 1), heights=c(w_w, 1), guides = "collect") + 
+  plot_annotation(tag_levels = 'A') & theme(plot.tag = element_text(face = 'bold'))
+top_row
+ggsave("../figures/main_paper/figure_4_top_row.png", width = 50, height = 30, units = "cm")
+w_h <- 1.6
+low_row <- relative_reward_by_dom_levels + dom_one_beliefs_vs_dom_two + 
+  plot_layout(widths=c(2,w_h), heights=c(2,w_h), guides = "collect")
+low_row
+ggsave("../figures/main_paper/figure_4_low_row.png", width = 50, height = 30, units = "cm")
+
 (pl_dom1_dom2_offers | dom_two_beliefs_vs_dom_one) / (relative_reward_by_dom_levels | dom_one_beliefs_vs_dom_two) + 
   plot_layout(guides = "collect") + 
   plot_annotation(tag_levels = 'A') & theme(plot.tag = element_text(face = 'bold'))
@@ -596,11 +624,12 @@ dom_zero_random_identification %>%
       name = "Trial Number") +
     scale_x_discrete(name = "Receiver DoM", labels = c(0,2)) +
     ggtitle("Trials until receiver identifies random sender") +
-    theme(aspect.ratio = 1, legend.position = c(0.80, 0.8)) +
+    theme(aspect.ratio = 1, legend.position = c(0.8, 0.3)) +
     theme(text=element_text(size=20)) + 
     scale_fill_manual(values = receivers_colours,
                       name = "Receiver\nDoM level", labels = c(0,2))
 time_to_random_sender_identification
+ggsave("../figures/main_paper/figure_5_a.png", width = 50, height = 30, units = "cm")
 ```
 
 #### Effect on the reward
@@ -655,9 +684,12 @@ first_task_data$game_results %>%
   group_by(receiver_dom_level, sender_dom_level,dom_difference) %>% 
   summarise(average_sender_reward = mean(total_sender_reward),
             average_receiver_reward = mean(total_receiver_reward)) %>% 
-  mutate(reward_ratio = 1 - (average_receiver_reward / average_sender_reward)) %>% 
+  mutate(reward_ratio = 1 - (average_receiver_reward / average_sender_reward))
+
+all_dyads_reward_ratio_plot <- 
+all_dyads_reward_ratio %>% 
   ggplot(aes(receiver_dom_level, y = reward_ratio, fill = sender_dom_level,
-             colour = factor(dom_difference), alpha = factor(dom_difference))) + 
+             colour = factor(dom_difference))) + 
   geom_col(position = position_dodge2(0.9,preserve = 'single'),
            stat = "identity", size = 1.5) +
   scale_fill_manual(values = custom_colors$sender_tom,
@@ -670,17 +702,19 @@ first_task_data$game_results %>%
   xlab("Receiver DoM level")+
   guides(color = "none") + 
   theme(aspect.ratio = 0.9) +
-  scale_y_continuous(name="Payout Ratio: R/S", 
+  scale_y_continuous(name="Payout Ratio: S/R", 
                      expand = c(0,0),
                      limits = c(-0.4,0.8),
                      breaks = seq(-0.4,0.8,0.2),
                      labels = seq(0.6,1.8,0.2))
-all_dyads_reward_ratio
+all_dyads_reward_ratio_plot
+ggsave("../figures/main_paper/figure_5_c.png", width = 50, height = 30, units = "cm")
 ```
 
 ```{r dom two beliefs vs m1, fig.width=10, fig.height=5}
 dom_two_beliefs_vs_minus_one <- 
 first_task_data$dom_2_receiver_beliefs %>% 
+  filter(sender_threshold > 0) %>% 
   mutate(sender_threshold = ifelse(sender_threshold > 0, sender_threshold, "Random")) %>% 
   mutate(sender_dom_level = factor(sender_dom_level),
          sender_threshold = factor(sender_threshold),
@@ -706,7 +740,7 @@ first_task_data$dom_2_receiver_beliefs %>%
     scale_color_manual(
       values = senders_colours,
       name = expression(paste('Sender threshold')),
-      labels = c("random", "\u03B7 = 0.5" ,"\u03B7 = 0.1")) +
+      labels = c("random","\u03B7 = 0.1", "\u03B7 = 0.5")) +
     facet_grid(.~sender_threshold) + 
     scale_x_continuous(name="Trial", breaks=c(0,4,8,11)) +
     scale_y_continuous(name = "Posterior P.", breaks = c(0,1)) +
@@ -715,11 +749,334 @@ first_task_data$dom_2_receiver_beliefs %>%
   theme(text=element_text(size=20)) + 
   facet_grid(vars(receiver_threshold), vars(sender_threshold))
 dom_two_beliefs_vs_minus_one
+ggsave("../figures/main_paper/figure_5_b.png", width = 50, height = 30, units = "cm")
 ```
 ```{r dom 2 vs dom m1 total effect, fig.width=15, fig.height=10}
 (time_to_random_sender_identification /dom_two_beliefs_vs_minus_one) | (all_dyads_reward_ratio) +
   plot_layout(guides = "collect") + 
   plot_annotation(tag_levels = 'A') & theme(plot.tag = element_text(face = 'bold'))
 ggsave("../figures/main_paper/figure_5.png", width = 50, height = 30, units = "cm")
+```
+```{r}
+pl_dom1_dom2_offers <- 
+  first_task_data$game_results %>% 
+  filter(receiver_dom_level == 2, 
+         sender_dom_level == -1,
+         sender_threshold > 0,
+         seed == sid) %>% 
+  mutate(sender_threshold = factor(sender_threshold),
+         response = factor(response, labels = c('reject','accept'))) %>%
+  mutate(sender_threshold = factor(sender_threshold)) %>% 
+  ggplot(aes(x = trial_number, y = offer)) + 
+    geom_line(
+      aes(
+        colour = sender_threshold, 
+        linetype = sender_threshold,
+        alpha = sender_threshold),
+      size = game_line_width) + 
+    geom_point(aes(
+      color = sender_threshold, 
+      fill = response ,
+      shape = factor(response)), 
+      size = shape_size) + 
+    scale_fill_manual(values = custom_colors$accept_reject,
+                       name = "Receiver response") +
+    scale_color_manual(
+      values = custom_colors$sender_type,
+      name = expression(paste('Sender type')),
+      labels = c("random", "\u03B7 = 0.1" ,"\u03B7 = 0.5")
+      )+
+    scale_shape_manual(
+      values=c(custom_shape$reject, custom_shape$accept),
+      name = "Receiver response",
+      labels = c("Reject","Accept")) + 
+    scale_linetype_manual(values = c("longdash", "solid", "solid")) +
+    scale_alpha_manual(values = c(0.3, 1, 1)) +
+    scale_x_continuous(name="Trial", breaks=seq(0, 12, 2)) +
+    scale_y_continuous(limits = c(0,1),breaks = c(0,.5,1)) +
+    labs(y = '', x= 'Trial') + 
+    ggtitle('DoM(1) vs. DoM(2)') +
+    facet_grid(.~factor(receiver_threshold)) + 
+    theme(aspect.ratio = dynamics_plot_aspect_ratio) +
+    theme(text=element_text(size=20)) + 
+    ggtitle('DoM(1) Sender vs. DoM(2)\ngame dynamics') +
+  guides(color = "none", shape = "none", fill = "none", linetype="none", alpha = "none")
+pl_dom1_dom2_offers
+```
+```{r}
+first_task_data$dom_2_receiver_beliefs %>% 
+  mutate(sender_threshold = ifelse(sender_threshold > 0, sender_threshold, "Random")) %>% 
+  mutate(sender_dom_level = factor(sender_dom_level),
+         sender_threshold = factor(sender_threshold),
+         receiver_dom_level = factor(receiver_dom_level),
+         receiver_threshold = factor(receiver_threshold)) %>% 
+  filter(sender_dom_level == "-1",
+         seed == sid) %>% 
+  mutate(
+    `P(0.0)` = `p_2_2_0`,
+    `P(0.1)` = `p_2_2_1`,
+    `P(0.5)` = `p_2_2_2`
+    ) %>% 
+  ggplot() + 
+    geom_line(aes(x = trial_number, y = `P(0.0)`, colour='`P(0.0)`'), size=belief_line_width) + 
+    geom_line(aes(x = trial_number, y = `P(0.1)`, colour='`P(0.1)`'), size=belief_line_width) + 
+    geom_line(aes(x = trial_number, y = `P(0.5)`, colour='`P(0.5)`'), size=belief_line_width) + 
+    scale_linetype_manual(values=c("solid", "dotted", "solid"))+
+    scale_color_manual(
+      values = senders_colours,
+      name = expression(paste('Sender threshold')),
+      labels = c("random", "\u03B7 = 0.5" ,"\u03B7 = 0.1")) +
+    facet_grid(.~sender_threshold) + 
+    scale_x_continuous(name="Trial", breaks=c(0,4,8,11)) +
+    scale_y_continuous(name = "Posterior P.", breaks = c(0,1)) +
+    ggtitle('Receiver beliefs:\nDoM(2) vs. DoM(1)') +
+    theme(aspect.ratio = 1) +
+  theme(text=element_text(size=20)) + 
+  facet_grid(vars(receiver_threshold), vars(sender_threshold))
+```
+
+```{r agent base simulation}
+all_dyads_reward_ratio <- 
+first_task_data$game_results %>% 
+  filter(sender_threshold > 0) %>% 
+  mutate(dom_difference = abs(as.numeric(receiver_dom_level) - as.numeric(sender_dom_level))) %>% 
+  mutate(receiver_threshold = factor(receiver_threshold),
+         sender_threshold = factor(sender_threshold),
+         receiver_dom_level = factor(receiver_dom_level),
+         sender_dom_level = factor(sender_dom_level)) %>% 
+  group_by(receiver_dom_level, sender_dom_level,seed, dom_difference) %>% 
+  summarise(total_sender_reward = sum(sender_reward),
+            total_receiver_reward = sum(receiver_reward)) %>% 
+  group_by(receiver_dom_level, sender_dom_level,dom_difference) %>% 
+  summarise(average_sender_reward = mean(total_sender_reward),
+            average_receiver_reward = mean(total_receiver_reward)) %>% 
+  mutate(reward_ratio = 1 - (average_receiver_reward / average_sender_reward))
+```
+
+```{r fixed sender}
+number_of_generations <- 20
+
+number_of_agents <- data.frame(rep(1/2,2))
+
+for(gen in seq(1:number_of_generations))
+{
+  proportion_of_low_dom_receivers <- number_of_agents[1,gen]
+  proportion_of_high_dom_receivers <- number_of_agents[2,gen]
+  relative_low_dom_receivers_strength <- (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == 1 & receiver_dom_level == 0))$average_receiver_reward  
+  relative_high_dom_receivers_strength <-  (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == 1 & receiver_dom_level == 2))$average_receiver_reward
+  proportinal_streangth <- relative_low_dom_receivers_strength / (relative_low_dom_receivers_strength + relative_high_dom_receivers_strength)
+  updated_p_low <- proportinal_streangth * proportion_of_low_dom_receivers 
+  updated_p_high <- (1- proportinal_streangth) * proportion_of_high_dom_receivers
+  new_population_proportions <- c(updated_p_low / (updated_p_low + updated_p_high),
+                                  updated_p_high / (updated_p_low + updated_p_high))
+  number_of_agents = cbind(number_of_agents, new_population_proportions)
+}
+
+dom1_population <- data.frame(t(number_of_agents))
+names(dom1_population) = c("DoM0","DoM2")  
+dom1_population["Genetarion"] = seq(0:number_of_generations)
+
+
+dom_1_only <- dom1_population %>% 
+  ggplot(aes(Genetarion)) + 
+  geom_line(aes(y = DoM0), colour = "red") + 
+  geom_line(aes(y = DoM2), colour = "green")
+
+
+number_of_agents <- data.frame("Gen0" = rep(1/2,2))
+for(gen in seq(1:number_of_generations))
+{
+  proportion_of_low_dom_receivers <- number_of_agents[1,gen]
+  proportion_of_high_dom_receivers <- number_of_agents[2,gen]
+  relative_low_dom_receivers_strength <- (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == -1 & receiver_dom_level == 0))$average_receiver_reward  
+  relative_high_dom_receivers_strength <-  (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == -1, receiver_dom_level == 2))$average_receiver_reward
+  proportinal_streangth <- relative_low_dom_receivers_strength / (relative_low_dom_receivers_strength + relative_high_dom_receivers_strength)
+  updated_p_low <- proportinal_streangth * proportion_of_low_dom_receivers 
+  updated_p_high <- (1- proportinal_streangth) * proportion_of_high_dom_receivers
+  new_population_proportions <- c(updated_p_low / (updated_p_low + updated_p_high),
+                                  updated_p_high / (updated_p_low + updated_p_high))
+  number_of_agents = cbind(number_of_agents, new_population_proportions)
+}
+
+dom_m1_population <- data.frame(t(number_of_agents))
+names(dom_m1_population) = c("DoM0","DoM2")  
+dom_m1_population["Genetarion"] = seq(0:number_of_generations)
+
+dom_m1_only <- dom_m1_population %>% 
+  ggplot(aes(Genetarion)) + 
+  geom_line(aes(y = DoM0), colour = "red") + 
+  geom_line(aes(y = DoM2), colour = "green")
+
+dom_1_only + dom_m1_only  
+
+dom1_population['sender_level'] = 1
+dom_m1_population['sender_level'] = -1
+
+dom1_population %>% 
+  rbind(dom_m1_population) %>% 
+  pivot_longer(cols = !c("Genetarion", "sender_level"), names_to = "receiver_level") %>% 
+  ggplot(aes(Genetarion, value, colour = receiver_level)) + 
+  geom_line(aes(linetype=factor(sender_level)), size=1.5) + 
+  scale_colour_manual(values = custom_colors$receiver_tom,
+                      name = "Receiver\nDoM level", 
+                      labels = c("0", "2")) + 
+  scale_linetype_manual(values = c("longdash", "dotted"),
+                        name = "Sender\nDoM level", 
+                        labels = c("-1", "1"))
+```
+
+```{r fixed receiver}
+
+number_of_agents <- data.frame(rep(1/2,2))
+
+for(gen in seq(1:number_of_generations))
+{
+  proportion_of_low_dom_receivers <- number_of_agents[1,gen]
+  proportion_of_high_dom_receivers <- number_of_agents[2,gen]
+  relative_low_dom_receivers_strength <- (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == -1 & receiver_dom_level == 0))$average_sender_reward  
+  relative_high_dom_receivers_strength <-  (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == 1 & receiver_dom_level == 0))$average_sender_reward
+  proportinal_streangth <- relative_low_dom_receivers_strength / (relative_low_dom_receivers_strength + relative_high_dom_receivers_strength)
+  updated_p_low <- proportinal_streangth * proportion_of_low_dom_receivers 
+  updated_p_high <- (1- proportinal_streangth) * proportion_of_high_dom_receivers
+  new_population_proportions <- c(updated_p_low / (updated_p_low + updated_p_high),
+                                  updated_p_high / (updated_p_low + updated_p_high))
+  number_of_agents = cbind(number_of_agents, new_population_proportions)
+}
+
+dom0_population <- data.frame(t(number_of_agents))
+names(dom0_population) = c("DoM-1","DoM1")  
+dom0_population["Genetarion"] = seq(0:number_of_generations)
+
+dom0_only <- dom0_population %>% 
+  ggplot(aes(Genetarion)) + 
+  geom_line(aes(y = `DoM-1`), colour = "red") + 
+  geom_line(aes(y = DoM1), colour = "green")
+
+
+
+sender_dom_level = "-1"
+number_of_agents <- data.frame("Gen0" = rep(1/2,2))
+for(gen in seq(1:number_of_generations))
+{
+  proportion_of_low_dom_receivers <- number_of_agents[1,gen]
+  proportion_of_high_dom_receivers <- number_of_agents[2,gen]
+  
+  relative_low_dom_receivers_strength <- (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == -1 & receiver_dom_level == 2))$average_sender_reward  
+  
+  relative_high_dom_receivers_strength <-  (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == 1, receiver_dom_level == 2))$average_sender_reward
+  proportinal_streangth <- relative_low_dom_receivers_strength / (relative_low_dom_receivers_strength + relative_high_dom_receivers_strength)
+  updated_p_low <- proportinal_streangth * proportion_of_low_dom_receivers 
+  updated_p_high <- (1- proportinal_streangth) * proportion_of_high_dom_receivers
+  new_population_proportions <- c(updated_p_low / (updated_p_low + updated_p_high),
+                                  updated_p_high / (updated_p_low + updated_p_high))
+  number_of_agents = cbind(number_of_agents, new_population_proportions)
+}
+
+dom_2_population <- data.frame(t(number_of_agents))
+names(dom_2_population) = c("DoM-1","DoM1")  
+dom_2_population["Genetarion"] = seq(0:number_of_generations)
+
+dom_2_only <- dom_2_population %>% 
+  ggplot(aes(Genetarion)) + 
+  geom_line(aes(y = `DoM-1`), colour = "red") + 
+  geom_line(aes(y = DoM1), colour = "green")
+
+dom_2_only + dom0_only  
+
+dom_2_population['receiver_level'] = 2
+dom0_population['receiver_level'] = 0
+
+dom_2_population %>% 
+  rbind(dom0_population) %>% 
+  pivot_longer(cols = !c("Genetarion", "receiver_level"), names_to = "sender_level") %>% 
+  ggplot(aes(Genetarion, value, colour = sender_level)) + 
+  geom_line(aes(linetype=factor(receiver_level)), size=1.5) + 
+  scale_colour_manual(values = custom_colors$sender_tom,
+                      name = "Sender\nDoM level", 
+                      labels = c("-1", "1")) + 
+  scale_linetype_manual(values = c("longdash", "dotted"),
+                        name = "Receiver\nDoM level", 
+                        labels = c("0", "2"))
+```
+```{r entire population simulation}
+
+number_of_generations <- 1000
+number_of_agents <- data.frame("Gen0" = rep(1/2,4))
+
+for(gen in seq(1:number_of_generations))
+{
+  proportion_of_low_dom_receivers <- number_of_agents[1,gen]
+  proportion_of_high_dom_receivers <- number_of_agents[2,gen]
+  proportion_of_low_dom_senders <- number_of_agents[3,gen]
+  proportion_of_high_dom_senders <- number_of_agents[4,gen]
+  
+  relative_low_dom_receivers_strength <- (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == -1 & receiver_dom_level == 0))$average_receiver_reward * proportion_of_low_dom_senders +   (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == 1 & receiver_dom_level == 0))$average_receiver_reward * proportion_of_high_dom_senders
+  
+  relative_high_dom_receivers_strength <- (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == -1 & receiver_dom_level == 2))$average_receiver_reward * proportion_of_low_dom_senders +   (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == 1 & receiver_dom_level == 2))$average_receiver_reward * proportion_of_high_dom_senders
+  
+  proportinal_low_dom_receivers_strength <- relative_low_dom_receivers_strength / (relative_low_dom_receivers_strength + relative_high_dom_receivers_strength)
+  
+  proportinal_high_dom_receivers_strength <- 1-proportinal_low_dom_receivers_strength
+  
+  relative_low_dom_senders_strength <- (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == -1 & receiver_dom_level == 0))$average_sender_reward * proportion_of_low_dom_receivers +   (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == -1 & receiver_dom_level == 2))$average_sender_reward * proportion_of_high_dom_receivers
+  
+  relative_high_dom_senders_strength <- (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == 1 & receiver_dom_level == 0))$average_sender_reward * proportion_of_low_dom_receivers +   (all_dyads_reward_ratio %>% 
+    filter(sender_dom_level == 1 & receiver_dom_level == 2))$average_sender_reward * proportion_of_high_dom_receivers
+  
+  proportinal_low_dom_senders_strength <- relative_low_dom_senders_strength / (relative_low_dom_senders_strength + relative_high_dom_senders_strength)
+  
+  proportinal_high_dom_senders_strength <- 1-proportinal_low_dom_senders_strength
+  
+  updated_p_low_dom_receivers <- proportinal_low_dom_receivers_strength * proportion_of_low_dom_receivers 
+  updated_p_high_dom_receivers <- proportinal_high_dom_receivers_strength * proportion_of_high_dom_receivers
+    
+  new_receivers_population_proportions <- c(updated_p_low_dom_receivers / (updated_p_low_dom_receivers + updated_p_high_dom_receivers),updated_p_high_dom_receivers / (updated_p_low_dom_receivers + updated_p_high_dom_receivers))
+  
+  
+  updated_p_low_dom_senders <- proportinal_low_dom_senders_strength * proportion_of_low_dom_senders 
+  updated_p_high_dom_senders <- proportinal_high_dom_senders_strength * proportion_of_high_dom_senders
+    
+  new_senders_population_proportions <- c(updated_p_low_dom_senders / (updated_p_low_dom_senders + updated_p_high_dom_senders),updated_p_high_dom_senders / (updated_p_low_dom_senders + updated_p_high_dom_senders))
+  
+  number_of_agents = cbind(number_of_agents, c(new_receivers_population_proportions, new_senders_population_proportions))
+}
+
+all_agents_population <- data.frame(t(number_of_agents))
+names(all_agents_population) = c("DoM0","DoM2","DoM-1","DoM1")  
+all_agents_population["Genetarion"] = seq(0:number_of_generations)
+
+all_agents_population %>% 
+  pivot_longer(cols = !c("Genetarion"), names_to = "agent_level") %>% 
+  mutate(agent_type = ifelse(agent_level %in% c("DoM0","DoM2"), "receiver", "sender")) %>% 
+  ggplot(aes(Genetarion, value, colour = agent_level)) + 
+  geom_line(aes(linetype=factor(agent_type)), size=1.5) + 
+  scale_colour_manual(values = c(custom_colors$sender_tom[1],
+                                 custom_colors$receiver_tom[1],
+                                 custom_colors$sender_tom[2],
+                                 custom_colors$receiver_tom[2]),
+                      name = "DoM level", 
+                      labels = c("-1", "0","1","2")) + 
+  scale_linetype_manual(values = c("longdash", "dotted"),
+                        name = "Agent type", 
+                        labels = c("Receiver", "Sender")) + 
+  ylab("Posterior P.") + 
+  ggtitle(paste0("Number of generations:", number_of_generations))
+
+
 ```
 
